crates/next-custom-transforms/tests/errors/react-server-components/server-graph/metadata/output.js
// metadata without generateMetadata is ok.
export const metadata = {};
export default function() {
    return null;
}
